--- a/package.json
+++ b/package.json
@@ -29,15 +29,22 @@
     "jwks-rsa": "^1.6.0",
     "kafkajs": "^1.14.0",
     "method-override": "^3.0.0",
+    "mongodb-client-encryption": "^1.1.0",
     "mongoose": "^5.7.9",
+    "saslprep": "^1.0.3",
     "serverless-http": "^2.6.0",
+    "serverless-webpack": "^5.3.5",
     "typescript": "^3.7.2",
+    "webpack": "^5.6.0",
+    "webpack-node-externals": "^2.5.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.4",
     "serverless-offline": "^6.8.0",
+    "ts-loader": "^8.0.11",
     "ts-node-dev": "^1.0.0-pre.44",
-    "tslint": "^5.20.1"
+    "tslint": "^5.20.1",
+    "webpack-cli": "^4.2.0"
   }
 }
